--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
@@ -1318,6 +1318,11 @@
                                 </div>
 
                                 <div class="form-group">
+                                    <label for="PeaceMakerId">If Referred, please specify referred to whom</label>
+                                    <input [formControl]="caseManageForm.controls['ReferredToWhom']" class="form-control" maxlength="2000" />
+                                </div>
+
+                                <div class="form-group">
                                     <label for="CenterId">Source of case</label>
                                     <ng-select [options]="sourceOfCaseLookupOptionList"
                                                placeholder="Select"
