--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.view.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.view.html
@@ -800,6 +800,10 @@
                                     <span>{{ (caseStatusOptionList | MatchesPipe:manageForm.CaseStatusId) }}</span>
                                 </div>
                                 <div class="form-group">
+                                    <label>If Referred, please specify referred to whom  :</label>
+                                    <span>{{ manageForm.ReferredToWhom }}</span>
+                                </div>
+                                <div class="form-group">
                                     <label>Source of case  :</label>
                                     <span>{{ (sourceOfCaseLookupOptionList | MatchesPipe:manageForm.SourceOfCaseLookupId) }}</span>
                                 </div>
