--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.move.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.move.html
@@ -122,7 +122,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="CenterId">If yes, what was the outcome of that help? *</label>
+                                    <label for="CenterId">If yes, what was the outcome of that help?</label>
                                     <input [formControl]="category2Form.controls['SoughtHelpOutPut']" class="form-control" />
                                 </div>
 
@@ -167,7 +167,7 @@
                             </div>
                             <div class="card-block primary-info-view">
                                 <div class="form-group">
-                                    <label for="PrimaryEmergencyContactName">Primary Emergency Contact Name</label>
+                                    <label for="PrimaryEmergencyContactName">Primary Emergency Contact Name *</label>
                                     <input [formControl]="category2Form.controls['PrimaryEmergencyContactName']" class="form-control" />
                                     <div>
                                         <small *ngIf="category2Form.controls['PrimaryEmergencyContactName'].hasError('required') && category2Form.controls['PrimaryEmergencyContactName'].touched" class="mat-text-warn">Field is required.</small>
@@ -175,7 +175,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="CenterId">Relationship to client</label>
+                                    <label for="CenterId">Relationship to client *</label>
                                     <ng-select [options]="emergencyRelationshipOptionsList" placeholder="Select" formControlName="PrimaryEmergencyRelationshipToClientLookupId" [allowClear]="true">
                                     </ng-select>
                                     <div>
@@ -184,7 +184,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="CenterId">Phone number</label>
+                                    <label for="CenterId">Phone number *</label>
                                     <div class="form-group" [class.has-danger]="category2Form.controls['PrimaryEmergencyContactPhoneNumber'].invalid && category2Form.controls['PrimaryEmergencyContactPhoneNumber'].touched">
                                         <input [formControl]="category2Form.controls['PrimaryEmergencyContactPhoneNumber']" digits maxlength="14" class="form-control" />
                                         <div>
@@ -202,7 +202,7 @@
                             </div>
                             <div class="card-block primary-info-view">
                                 <div class="form-group">
-                                    <label for="CenterId">Are you suffering from any major illness?</label>
+                                    <label for="CenterId">Are you suffering from any major illness? *</label>
                                     <ng-select [options]="yesNoOptionsList" placeholder="Select" formControlName="SufferingFromAnyMajorIllnessLookupId" [allowClear]="true">
                                     </ng-select>
                                     <div>
@@ -216,7 +216,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="CenterId">Do you have any diagnosed psychiatric illness?</label>
+                                    <label for="CenterId">Do you have any diagnosed psychiatric illness? *</label>
                                     <ng-select [options]="yesNoOptionsList" placeholder="Select" formControlName="DiagnosedPsychiatricIllnessLookupId" [allowClear]="true">
                                     </ng-select>
                                     <div>
@@ -225,7 +225,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="CenterId">If yes, please specify:?</label>
+                                    <label for="CenterId">If yes, please specify *</label>
                                     <input [formControl]="category2Form.controls['DiagnosedPsychiatricIllnessDesc']" class="form-control" />
                                 </div>
                             </div>
@@ -237,7 +237,7 @@
 
             </div>
             <div class="form-group text-center">
-                <button class="btn btn-primary" [disabled]="!category2Form.valid || !mainForm.valid" (click)="updateCategory2()">Update</button>
+                <button class="btn btn-primary" [disabled]="!category2Form.valid || !mainForm.valid || !closedForm.valid || !unresolvedForm.valid" (click)="updateCategory2()">Update</button>
             </div>
         </form>
 
@@ -290,7 +290,7 @@
                     </div>
                 </div>
                 <div class="form-group text-center">
-                    <button class="btn btn-primary" [disabled]="!mainForm.valid || !category3Form.valid" (click)="updateCategory3()">Update</button>
+                    <button class="btn btn-primary" [disabled]="!mainForm.valid || !category3Form.valid || !referredForm.valid || !closedForm.valid" (click)="updateCategory3()">Update</button>
                 </div>
             </div>
         </form>
@@ -847,10 +847,7 @@
 
                                 <div class="form-group">
                                     <label for="CenterId">Has the legal consent form been signed and submitted? *</label>
-                                    <ng-select [options]="yesNoOptionsList"
-                                               placeholder="Select"
-                                               formControlName="LegalConsentFormLookupId"
-                                               [allowClear]="true">
+                                    <ng-select [options]="yesNoOptionsList" placeholder="Select" formControlName="LegalConsentFormLookupId" [allowClear]="true">
                                     </ng-select>
                                     <div>
                                         <small *ngIf="category5Form.controls['LegalConsentFormLookupId'].hasError('required') && category5Form.controls['LegalConsentFormLookupId'].touched" class="mat-text-warn">Field is required.</small>
@@ -859,10 +856,7 @@
 
                                 <div class="form-group">
                                     <label for="CenterId">Has any legal action been taken by the client in this regard prior to approaching OPM for help? *</label>
-                                    <ng-select [options]="yesNoOptionsList"
-                                               placeholder="Select"
-                                               formControlName="LegalActionLookupId"
-                                               [allowClear]="true">
+                                    <ng-select [options]="yesNoOptionsList" placeholder="Select" formControlName="LegalActionLookupId" [allowClear]="true">
                                     </ng-select>
                                     <div>
                                         <small *ngIf="category5Form.controls['LegalActionLookupId'].hasError('required') && category5Form.controls['LegalActionLookupId'].touched" class="mat-text-warn">Field is required.</small>
@@ -880,9 +874,7 @@
                             <div class="card-block">
                                 <div class="form-group">
                                     <label for="CenterId">Outcome *</label>
-                                    <ss-multiselect-dropdown [options]="outcomeLookupOptionList"
-                                                             formControlName="OutcomeLookupId"
-                                                             [(ngModel)]="caseBook.Legal.OutcomeLookupArray">
+                                    <ss-multiselect-dropdown [options]="outcomeLookupOptionList" formControlName="OutcomeLookupId" [(ngModel)]="caseBook.Legal.OutcomeLookupArray">
                                     </ss-multiselect-dropdown>
                                     <div>
                                         <small *ngIf="category5Form.controls['OutcomeLookupId'].hasError('required') && category5Form.controls['OutcomeLookupId'].touched" class="mat-text-warn">Field is required.</small>
@@ -891,9 +883,7 @@
 
                                 <div class="form-group">
                                     <label for="CenterId">List all documents that the client has submitted</label>
-                                    <ss-multiselect-dropdown [options]="documentsLookupOptionList"
-                                                             formControlName="DocumentsLookupId"
-                                                             [(ngModel)]="caseBook.Legal.DocumentsLookupArray">
+                                    <ss-multiselect-dropdown [options]="documentsLookupOptionList" formControlName="DocumentsLookupId" [(ngModel)]="caseBook.Legal.DocumentsLookupArray">
                                     </ss-multiselect-dropdown>
                                     <div>
                                         <small *ngIf="category5Form.controls['DocumentsLookupId'].hasError('required') && category5Form.controls['DocumentsLookupId'].touched" class="mat-text-warn">Field is required.</small>
