--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.move.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.move.html
@@ -211,7 +211,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="CenterId">If yes, please specify:?</label>
+                                    <label for="CenterId">If yes, please specify</label>
                                     <input [formControl]="category2Form.controls['SufferingFromAnyMajorIllnessDesc']" class="form-control" />
                                 </div>
 
@@ -225,7 +225,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="CenterId">If yes, please specify *</label>
+                                    <label for="CenterId">If yes, please specify </label>
                                     <input [formControl]="category2Form.controls['DiagnosedPsychiatricIllnessDesc']" class="form-control" />
                                 </div>
                             </div>
@@ -237,7 +237,7 @@
 
             </div>
             <div class="form-group text-center">
-                <button class="btn btn-primary" [disabled]="!category2Form.valid || !mainForm.valid || !closedForm.valid || !unresolvedForm.valid" (click)="updateCategory2()">Update</button>
+                <button class="btn btn-primary" [disabled]="!category2Form.valid || !mainForm.valid || isClosed ? !closedForm.valid : false || isUnresolved ? !unresolvedForm.valid : false" (click)="updateCategory2()">Update</button>
             </div>
         </form>
 
@@ -290,7 +290,7 @@
                     </div>
                 </div>
                 <div class="form-group text-center">
-                    <button class="btn btn-primary" [disabled]="!mainForm.valid || !category3Form.valid || !referredForm.valid || !closedForm.valid" (click)="updateCategory3()">Update</button>
+                    <button class="btn btn-primary" [disabled]="!mainForm.valid || !category3Form.valid || isReferred ? !referredForm.valid : false || isClosed ? !closedForm.valid : false" (click)="updateCategory3()">Update</button>
                 </div>
             </div>
         </form>
