--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.move.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.move.html
@@ -290,7 +290,7 @@
                     </div>
                 </div>
                 <div class="form-group text-center">
-                    <button class="btn btn-primary" [disabled]="!mainForm.valid || !category3Form.valid || (isReferred && !referredForm.valid) || (isclosed && !closedForm.valid)" (click)="updateCategory3()">Update</button>
+                    <button class="btn btn-primary" [disabled]="!mainForm.valid || !category3Form.valid || (isReferred && !referredForm.valid) || (isClosed && !closedForm.valid)" (click)="updateCategory3()">Update</button>
                 </div>
             </div>
         </form>
