--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.move.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.move.html
@@ -237,7 +237,7 @@
 
             </div>
             <div class="form-group text-center">
-                <button class="btn btn-primary" [disabled]="!category2Form.valid || !mainForm.valid || (isClosed && !closedForm.valid) || (isUnresolved && !unresolvedForm.valid)" (click)="updateCategory2()">Update</button>
+                <button class="btn btn-primary" [disabled]="!category2Form.valid || !mainForm.valid || (isCloseStatus && !closedForm.valid) || (isUnresolved && !unresolvedForm.valid)" (click)="updateCategory2()">Update</button>
             </div>
         </form>
 
@@ -290,7 +290,7 @@
                     </div>
                 </div>
                 <div class="form-group text-center">
-                    <button class="btn btn-primary" [disabled]="!mainForm.valid || !category3Form.valid || (isReferred && !referredForm.valid) || (isClosed && !closedForm.valid)" (click)="updateCategory3()">Update</button>
+                    <button class="btn btn-primary" [disabled]="!mainForm.valid || !category3Form.valid || (isReferred && !referredForm.valid) || (isCloseStatus && !closedForm.valid)" (click)="updateCategory3()">Update</button>
                 </div>
             </div>
         </form>
@@ -370,7 +370,11 @@
 
                                 <div class="form-group">
                                     <label for="PeaceMakerId">Year of marriage *</label>
-                                    <input [formControl]="category4Form.controls['YearOfMarriage']" inputmode="numeric" maxlength="4" class="form-control" />
+                                    <input [formControl]="category4Form.controls['YearOfMarriage']" digits maxlength="4" class="form-control" />
+                                    <div>
+                                        <small *ngIf="category4Form.controls['YearOfMarriage'].hasError('required') && category4Form.controls['YearOfMarriage'].touched" class="mat-text-warn">Year is required</small>
+                                        <small *ngIf="category4Form.controls['YearOfMarriage'].dirty && category4Form.controls['YearOfMarriage'].invalid" class="mat-text-warn">Please provide a valid Year</small>
+                                </div>
                                 </div>
 
                                 <div class="form-group">
