fix: removed extra field in view case "Case management" tab and added spinner to view case and move case

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.move.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.move.html
@@ -1,4 +1,5 @@
-﻿<div class="row" style="justify-content: center">
+﻿<my-spinner [isRunning]="!isMainDataLoaded"></my-spinner>
+<div class="row" style="justify-content: center">
     <div class="col-md-6">
         <form [formGroup]="mainForm" *ngIf="isMainDataLoaded">
             <div class="centered">
