--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.view.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.view.html
@@ -3,6 +3,8 @@
         background-color:whitesmoke;
     }
 </style>
+<my-spinner [isRunning]="!isPrimaryDataLoaded"></my-spinner>
+
 <div class="table-responsive">
     <table class="table" *ngIf="caseBook">
         <thead>
@@ -23,7 +25,6 @@
         </tr>
     </table>
 </div>
-
 <div class="container-fluid case-detail-container">
     <!-- regular tabs -->
     <tabset>
@@ -826,10 +827,6 @@
                                 <div class="form-group">
                                     <label>Reason for selected Closure status  :</label>
                                     <span>{{ manageForm.TotalHoursSpentLookupId }}</span>
-                                </div>
-                                <div class="form-group">
-                                    <label>Reason for selected Closure status  :</label>
-                                    <span>{{ manageForm.ReasonForClosureStatus }}</span>
                                 </div>
                             </div>
                         </div>
