fix: Validation of "TotalNoOfSessionsLookupId" and "TotalHoursSpentLookupId" fields in the EditCase Module.

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
@@ -1351,7 +1351,7 @@
                                         <label for="CenterId">Total no of sessions</label>
                                         <input type="number" id="TotalNoOfSessionsLookupId" [formControl]="caseManageForm.controls['TotalNoOfSessionsLookupId']" class="form-control" />
                                         <small *ngIf="caseManageForm.controls['TotalNoOfSessionsLookupId'].touched && caseManageForm.controls['TotalNoOfSessionsLookupId'].invalid">                                            
-                                                Value should be between 0 and 99
+                                                Value should be between 0 & 99 And Non-Fractional.
                                         </small>
                                     </div>
                                 </div>
