fix: Added spinner for signup page

--- a/Web/WhitePage.MyWeb.UI/src/app/pages/pages.signin.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/pages/pages.signin.html
@@ -1,4 +1,4 @@
-
+<my-spinner [isRunning]="enableSpinner"></my-spinner>
 <div style="height: 100vh; display: flex;">
     <div class="auth-container">
         <div class="auth-title">
