--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
@@ -1895,7 +1895,7 @@
 
                                     <div class="form-group">
                                         <label for="PeacemakerId">Date *</label>
-                                        <my-date-picker name="CounselingDate" id="CounselingDate" [formControl]="caseSessionForm.controls['CounselingDate']"></my-date-picker>
+                                        <my-date-picker name="CounselingDate" id="CounselingDate" [options]="myDatePickerOptions" [formControl]="caseSessionForm.controls['CounselingDate']" ></my-date-picker>
                                         <div>
                                             <small *ngIf="caseSessionForm.controls['CounselingDate'].hasError('required') && caseSessionForm.controls['CounselingDate'].touched" class="mat-text-warn">Date is required.</small>
                                         </div>
@@ -1923,7 +1923,7 @@
 
                                     <div class="form-group">
                                         <label for="PeacemakerId">Next Session Date</label>
-                                        <my-date-picker name="NextSessionScheduled" id="NextSessionScheduled" [formControl]="caseSessionForm.controls['NextSessionScheduled']"></my-date-picker>
+                                        <my-date-picker name="NextSessionScheduled" id="NextSessionScheduled" [options]="myDatePickerOptions" [formControl]="caseSessionForm.controls['NextSessionScheduled']"></my-date-picker>
                                     </div>
 
                                     <div class="form-group">
