Fix : Changed the field "Year of marriage" to "Years of marriage" #48

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/household.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/household.component.html
@@ -100,7 +100,7 @@
                         <span>{{ (householdMembersOptionsList | MatchesPipe:familyHouseHold.HouseHoldMembersLivingLookupId:"multiselect") }}</span>
                     </div>
                     <div class="form-group">
-                        <label>Year of marriage  :</label>
+                        <label>Years of marriage  :</label>
                         <span>{{familyHouseHold.YearOfMarriage }}</span>
                     </div>
                     <div class="form-group">
