--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
@@ -427,11 +427,13 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="PeaceMakerId">Year of marriage</label>
-                                    <input [formControl]="clientAndHouseholdForm.controls['YearOfMarriage']" digits  maxlength="4" class="form-control" />
-                                    <small *ngIf="clientAndHouseholdForm.controls['YearOfMarriage'].dirty && clientAndHouseholdForm.controls['YearOfMarriage'].invalid">
-                                        Please provide a valid year
-                                    </small>
+                                    <div class="form-group" [class.has-danger]="clientAndHouseholdForm.controls['YearOfMarriage'].invalid && clientAndHouseholdForm.controls['YearOfMarriage'].touched">
+                                        <label for="PeaceMakerId">Years of marriage</label>
+                                        <input [formControl]="clientAndHouseholdForm.controls['YearOfMarriage']" digits maxlength="2" class="form-control" />
+                                        <small *ngIf="clientAndHouseholdForm.controls['YearOfMarriage'].dirty && clientAndHouseholdForm.controls['YearOfMarriage'].invalid">
+                                            Please provide valid years of marriage
+                                        </small>
+                                    </div>
                                 </div>
 
                                 <div class="form-group">
