--- a/Web/WhitePage.MyWeb.UI/src/app/user/user.create.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/user/user.create.html
@@ -30,6 +30,20 @@
                 </div>
             </div>
         </tab>
+        <tab heading="Deactivate User" style="width:100%">
+            <div class="row justify-content-center">
+                <div class="col-md-4 d-flex flex-column" style="min-width: 700px">
+                    <div class="card">
+                        <div class="card-header">
+                            User details
+                        </div>
+                        <div class="card-block primary-info-view">
+                            <deactivate-user></deactivate-user>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </tab>
     </tabset>
 </div>
 
