chore: separated edit case details as components (edit case refactoring)

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/abuse_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/abuse_case.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="caseAbuseForm" *ngIf="isAbuseDataLoaded">
+<form [formGroup]="caseAbuseForm">
     <div class="row" *ngIf="caseBook">
 
         <div class="col-md-4 d-flex flex-column">
