--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/household_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/household_case.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="clientAndHouseholdForm" *ngIf="isHouseHoldDataLoaded">
+<form [formGroup]="clientAndHouseholdForm">
     <div class="row">
 
         <div class="col-md-4 d-flex flex-column">
